--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
@@ -1,13 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.MainMenuController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/main_menu.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="startButton" layoutX="274.0" layoutY="200.0" mnemonicParsing="false" onAction="#onStartPressed" text="Start" />
-      <Label fx:id="myLabel" layoutX="280.0" layoutY="151.0" text="Label" />
+      <Label text="Snake Eyes" textFill="#71ae08">
+         <font>
+            <Font name="Algerian" size="70.0" />
+         </font>
+      </Label>
+      <VBox alignment="TOP_CENTER" prefHeight="250.0" prefWidth="440.0" spacing="2.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="10000.0" styleClass="MainMenuButton" text="PLAY">
+               <font>
+                  <Font name="Elephant" size="26.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" styleClass="MainMenuButton" text="Button" />
+            <Button mnemonicParsing="false" styleClass="MainMenuButton" text="Button" />
+            <Button mnemonicParsing="false" prefHeight="48.0" prefWidth="10000.0" styleClass="MainMenuButton" text="QUIT">
+               <font>
+                  <Font name="Elephant" size="25.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <VBox.margin>
+            <Insets bottom="80.0" left="80.0" right="80.0" />
+         </VBox.margin>
+         <padding>
+            <Insets top="50.0" />
+         </padding>
+      </VBox>
    </children>
-</AnchorPane>
+</VBox>
