--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import ru.nsu.amazyar.bases.*?>
+<?import ru.nsu.amazyar.constants.StageConstants?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.TreeView?>
-<?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.game_screen.GameScreenController">
+<AutoScalingStackPane fx:id="gamePane" onKeyPressed="#onKeyPressed" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.game_screen.GameScreenController">
    <children>
-      <Canvas height="400.0" width="600.0" />
-      <TreeView layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="150.0" />
+      <Canvas fx:id="gameBoard">
+      <height>
+         <StageConstants fx:constant="DEFAULT_STAGE_SIZE"/>
+      </height>
+
+      <width>
+         <StageConstants fx:constant="DEFAULT_STAGE_SIZE"/>
+      </width>
+      </Canvas>
+<!--      <TreeView fx:id="questView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="150.0" />-->
    </children>
-</AnchorPane>
+</AutoScalingStackPane>
