--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.*?>
 <?import ru.nsu.amazyar.bases.*?>
-<?import ru.nsu.amazyar.constants.StageConstants?>
-<?import javafx.scene.canvas.Canvas?>
+<?import ru.nsu.amazyar.constants.*?>
 
+<?import javafx.scene.control.Label?>
 <AutoScalingStackPane fx:id="gamePane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.game_screen.GameScreenController">
    <children>
       <Canvas fx:id="gameBoard">
       <height>
-         <StageConstants fx:constant="DEFAULT_STAGE_SIZE"/>
+         <StageConstants fx:constant="DEFAULT_STAGE_SIZE" />
       </height>
 
       <width>
-         <StageConstants fx:constant="DEFAULT_STAGE_SIZE"/>
+         <StageConstants fx:constant="DEFAULT_STAGE_SIZE" />
       </width>
       </Canvas>
 <!--      <TreeView fx:id="questView" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="150.0" />-->
