--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/lose_screen.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/lose_screen.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="97.0" layoutY="39.0" prefHeight="82.0" prefWidth="405.0" text="YOU LOST" textAlignment="CENTER" textFill="RED">
          <font>
-            <Font name="Cambria" size="62.0" />
+            <Font name="Georgia Bold" size="62.0" />
          </font>
       </Label>
       <Label alignment="CENTER" layoutY="151.0" prefHeight="18.0" prefWidth="600.0" text="Score: " />
