--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/game_screen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<AutoScalingStackPane fx:id="gamePane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.game_screen.GameScreenController">
+<AutoScalingStackPane fx:id="gamePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="ru.nsu.amazyar.game_screen.GameScreenController">
    <children>
       <Canvas fx:id="gameBoard">
       <height>
