--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
@@ -7,8 +7,7 @@
 <?import ru.nsu.amazyar.constants.StageConstants?>
 <?import ru.nsu.amazyar.constants.MainMenuConstants?>
 
-<?import javafx.scene.text.Font?>
-<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.amazyar.main_menu.MainMenuController">
+<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="ru.nsu.amazyar.main_menu.MainMenuController">
    <prefHeight>
       <StageConstants fx:constant="DEFAULT_STAGE_SIZE"/>
    </prefHeight>
