Add simple settings scene

--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/main_menu.fxml
@@ -33,7 +33,7 @@
             <MainMenuConstants fx:constant="DEFAULT_NAME_HEIGHT"/>
          </prefHeight>
       </Label>
-      <VBox fx:id="buttonBox" minWidth="-Infinity" alignment="TOP_CENTER">
+      <VBox minWidth="-Infinity" alignment="TOP_CENTER">
          <prefWidth>
             <MainMenuConstants fx:constant="DEFAULT_VBOX_WIDTH"/>
          </prefWidth>
