--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/settings.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/settings.fxml
@@ -111,6 +111,12 @@
       <TextField fx:id="speedField" text="1"/>
     </VBox>
 
+<!--    BRICK NUMBER    -->
+    <VBox>
+      <Label fx:id="brickNumberLabel" text="BRICK NUMBER: [0]"/>
+      <TextField fx:id="brickNumberField" text="0"/>
+    </VBox>
+
 
 <!--    GRID COLORS    -->
     <HBox>
