--- a/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/settings.fxml
+++ b/Task_2_3_1/src/main/resources/ru/nsu/amazyar/fxmls/settings.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import ru.nsu.amazyar.constants.SettingsSceneConstants?>
 <?import ru.nsu.amazyar.constants.StageConstants?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.shape.Box?>
-<?import javafx.scene.paint.Color?>
 <VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="ru.nsu.amazyar.settings_screen.SettingsController">
   <prefHeight>
     <SettingsSceneConstants fx:constant="DEFAULT_VBOX_HEIGHT"/>
